Changes since version 3.0.1
---------------------------

- Glacier2.AllowCategories is now deprecated and superseded by
  Glacier2.Filter.Category.Accept.

- A new address filtering mechanism has been added to the Glacier2 router.
  See Glacier2.Filter.Address.Accept and Glacier2.Filter.Address.Reject
  properties in the Ice documentation for details.

- The Glacier2 router's identity based filtering is now modifiable at
  runtime through the Glacier2::SessionControl interface.

- Generating new streaming functions for a Slice structure. The
  ice_write and ice_read member functions replace their internal
  equivalents (__write and __read).

- Removed getDefaultProperties() functions, and the global default
  properties. If you need global properties, you can easily
  create your own global variable.

- In Ice::Service, main(), run() and initializeCommunicator() take
  now a third parameter, const InitializationData&. It's defaulted
  for main() and run().

- The signature of createProperties()-with-parameters is now:
  PropertiesPtr createProperties(int* argc, char* argv[],
                                 const PropertiesPtr& defaults = 0);
  "defaults" represents an optional set of default properties
  used to initialize the new Properties object. Ice properties 
  defined on the command-line and properties defined in the Ice
  config file may override these default properties.
   
- Added a new communicator-initialization function:
  CommunicatorPtr initialize(const InitializationData&);

- Fixed a bug in dumpdb so that it handles object graphs correctly.

- Fixed a bug where the proxy timeout, compress flag and connection
  id attributes would be ignored for direct proxies using a router.

- Added ability to configure Ice thread start/stop hooks through
  InitializationData.

- Added SSL authorization as an alternative to username/password
  for Glacier2.  To authorize with SSL call
  Glacier2::Router::createSessionFromSecureConnection().  On the