@@ -64,131 +64,79 @@ Ice::ObjectAdapterI::activate()
 {
     LocatorInfoPtr locatorInfo;
     bool registerProcess = false;
-    string serverId;
-    CommunicatorPtr communicator;
     bool printAdapterReady = false;
 
-    {    
+    {
 	IceUtil::Monitor<IceUtil::RecMutex>::Lock sync(*this);
 	
 	checkForDeactivation();
 
-	if(!_printAdapterReadyDone)
+	//
+	// If the one off initializations of the adapter are already
+	// done, we just need to activate the incoming connection
+	// factories and we're done.
+	//
+	if(_activateOneOffDone)
 	{
-	    locatorInfo = _locatorInfo;
-            registerProcess = 
-	        _instance->initializationData().properties->getPropertyAsInt(_name + ".RegisterProcess") > 0;
-            serverId = _instance->initializationData().properties->getProperty("Ice.ServerId");
-	    printAdapterReady =
-	        _instance->initializationData().properties->getPropertyAsInt("Ice.PrintAdapterReady") > 0;
-            communicator = _communicator;
-	    _printAdapterReadyDone = true;
+	    for_each(_incomingConnectionFactories.begin(), _incomingConnectionFactories.end(),
+		     Ice::voidMemFun(&IncomingConnectionFactory::activate));
+	    return;
 	}
 	
-	for_each(_incomingConnectionFactories.begin(), _incomingConnectionFactories.end(),
-		 Ice::voidMemFun(&IncomingConnectionFactory::activate));	
+	//
+	// One off initializations of the adapter: update the locator
+	// registry and print the "adapter ready" message. We set the
+	// _waitForActivate flag to prevent deactivation from other
+	// threads while these one off initializations are done.
+	//
+	_waitForActivate = true;
+
+	locatorInfo = _locatorInfo;
+	printAdapterReady = _instance->initializationData().properties->getPropertyAsInt("Ice.PrintAdapterReady") > 0;
+	registerProcess = _instance->initializationData().properties->getPropertyAsInt(_name + ".RegisterProcess") > 0;
     }
 
-    if(registerProcess || !_id.empty())
+    try
+    {
+	Ice::Identity dummy;
+	dummy.name = "dummy";
+	updateLocatorRegistry(locatorInfo, createDirectProxy(dummy), registerProcess);
+    }
+    catch(const Ice::LocalException&)
     {
 	//
-	// We must get and call on the locator registry outside the thread
-	// synchronization to avoid deadlocks. (we can't make remote calls
-	// within the OA synchronization because the remote call will
-	// indirectly call isLocal() on this OA with the OA factory
-	// locked).
+	// If we couldn't update the locator registry, we let the
+	// exception go through and don't activate the adapter to
+	// allow to user code to retry activating the adapter
+	// later.
 	//
-	LocatorRegistryPrx locatorRegistry;
-	if(locatorInfo)
 	{
-	    //
-	    // TODO: This might throw if we can't connect to the
-	    // locator. Shall we raise a special exception for the
-	    // activate operation instead of a non obvious network
-	    // exception?
-	    //
-	    locatorRegistry = locatorInfo->getLocatorRegistry();
+	    IceUtil::Monitor<IceUtil::RecMutex>::Lock sync(*this);
+	    _waitForActivate = false;
+	    notifyAll();
 	}
-	
-	if(locatorRegistry && !_id.empty())
-	{
-	    try
-	    {
-		Identity ident;
-		ident.name = "dummy";
-		if(_replicaGroupId.empty())
-		{
-		    locatorRegistry->setAdapterDirectProxy(_id, createDirectProxy(ident));
-		}
-		else
-		{
-		    locatorRegistry->setReplicatedAdapterDirectProxy(_id, _replicaGroupId, createDirectProxy(ident));
-		}
-	    }
-	    catch(const ObjectAdapterDeactivatedException&)
-	    {
-		// IGNORE: The object adapter is already inactive.
-	    }
-	    catch(const AdapterNotFoundException&)
-	    {
-		NotRegisteredException ex(__FILE__, __LINE__);
-		ex.kindOfObject = "object adapter";
-		ex.id = _id;
-		throw ex;
-	    }
-	    catch(const InvalidReplicaGroupIdException&)
-	    {
-		NotRegisteredException ex(__FILE__, __LINE__);
-		ex.kindOfObject = "replica group";
-		ex.id = _replicaGroupId;
-		throw ex;
-	    }
-	    catch(const AdapterAlreadyActiveException&)
-	    {
-		ObjectAdapterIdInUseException ex(__FILE__, __LINE__);
-		ex.id = _id;
-		throw ex;
-	    }
-	}	    
-
-	if(registerProcess)
-	{
-	    if(!locatorRegistry)
-	    {
-		Warning out(communicator->getLogger());
-		out << "object adapter `" << _name << "' cannot register the process without a locator registry";
-	    }
-	    else if(serverId.empty())
-	    {
-		Warning out(communicator->getLogger());
-		out << "object adapter `" << _name << "' cannot register the process without a value for Ice.ServerId";
-	    }
-	    else
-	    {
-		try
-		{
-		    ProcessPtr servant = new ProcessI(communicator);
-		    Ice::ObjectPrx proxy = createDirectProxy(addWithUUID(servant)->ice_getIdentity());
-		    locatorRegistry->setServerProcessProxy(serverId, ProcessPrx::uncheckedCast(proxy));
-		}
-		catch(const ObjectAdapterDeactivatedException&)
-		{
-		    // IGNORE: The object adapter is already inactive.
-		}
-		catch(const ServerNotFoundException&)
-		{
-		    NotRegisteredException ex(__FILE__, __LINE__);
-		    ex.kindOfObject = "server";
-		    ex.id = serverId;
-		    throw ex;
-		}
-	    }
-	}
+	throw;
     }
 
     if(printAdapterReady)
     {
 	cout << _name << " ready" << endl;
+    }
+
+    {
+	IceUtil::Monitor<IceUtil::RecMutex>::Lock sync(*this);
+	assert(!_deactivated); // Not possible if _waitForActivate = true;
+
+	//
+	// Signal threads waiting for the activation.
+	//
+	_waitForActivate = false;
+	notifyAll();
+
+	_activateOneOffDone = true;
+
+	for_each(_incomingConnectionFactories.begin(), _incomingConnectionFactories.end(),
+		 Ice::voidMemFun(&IncomingConnectionFactory::activate));
     }
 }
 
@@ -219,7 +167,7 @@ Ice::ObjectAdapterI::deactivate()
 {
     vector<IncomingConnectionFactoryPtr> incomingConnectionFactories;
     OutgoingConnectionFactoryPtr outgoingConnectionFactory;
-
+    LocatorInfoPtr locatorInfo;
     {
 	IceUtil::Monitor<IceUtil::RecMutex>::Lock sync(*this);
 	
@@ -230,6 +178,15 @@ Ice::ObjectAdapterI::deactivate()
 	if(_deactivated)
 	{
 	    return;
+	}
+
+	//
+	// Wait for activation to complete. This is necessary to not 
+	// get out of order locator updates.
+	//
+	while(_waitForActivate)
+	{
+	    wait();
 	}
 
 	if(_routerInfo)
@@ -244,13 +201,26 @@ Ice::ObjectAdapterI::deactivate()
 	    //
 	    _routerInfo->setAdapter(0);
 	}
-
+	
         incomingConnectionFactories = _incomingConnectionFactories;
 	outgoingConnectionFactory = _instance->outgoingConnectionFactory();
+	locatorInfo = _locatorInfo;
 
 	_deactivated = true;
-	
+
 	notifyAll();
+    }
+
+    try
+    {
+	updateLocatorRegistry(locatorInfo, 0, false);
+    }
+    catch(const Ice::LocalException&)
+    {
+	//
+	// We can't throw exceptions in deactivate so we ignore
+	// failures to update the locator registry.
+	//
     }
 
     //
@@ -285,7 +255,7 @@ Ice::ObjectAdapterI::waitForDeactivate()
 	}
 
 	//
-	// If some other thread is currently deactivating, we wait
+	// If some other thread is currently updating the state, we wait
 	// until this thread is finished.
 	//
 	while(_waitForDeactivate)
@@ -702,11 +672,12 @@ Ice::ObjectAdapterI::ObjectAdapterI(const InstancePtr& instance, const Communica
     _communicator(communicator),
     _objectAdapterFactory(objectAdapterFactory),
     _servantManager(new ServantManager(instance, name)),
-    _printAdapterReadyDone(false),
+    _activateOneOffDone(false),
     _name(name),
     _id(instance->initializationData().properties->getProperty(name + ".AdapterId")),
     _replicaGroupId(instance->initializationData().properties->getProperty(name + ".ReplicaGroupId")),
     _directCount(0),
+    _waitForActivate(false),
     _waitForDeactivate(false)
 {
     __setNoDelete(true);
@@ -842,6 +813,7 @@ Ice::ObjectAdapterI::~ObjectAdapterI()
 	assert(!_communicator);
 	assert(_incomingConnectionFactories.empty());
 	assert(_directCount == 0);
+	assert(!_waitForActivate);
 	assert(!_waitForDeactivate);
     }
 }
@@ -971,6 +943,104 @@ Ice::ObjectAdapterI::parseEndpoints(const string& str) const
     }
 
     return endpoints;
+}
+
+void
+ObjectAdapterI::updateLocatorRegistry(const IceInternal::LocatorInfoPtr& locatorInfo,
+				      const Ice::ObjectPrx& proxy,
+				      bool registerProcess)
+{
+    if(!registerProcess && _id.empty())
+    {
+	return; // Nothing to update.
+    }
+
+    //
+    // We must get and call on the locator registry outside the thread
+    // synchronization to avoid deadlocks. (we can't make remote calls
+    // within the OA synchronization because the remote call will
+    // indirectly call isLocal() on this OA with the OA factory
+    // locked).
+    //
+    // TODO: This might throw if we can't connect to the
+    // locator. Shall we raise a special exception for the activate
+    // operation instead of a non obvious network exception?
+    //
+    LocatorRegistryPrx locatorRegistry = locatorInfo ? locatorInfo->getLocatorRegistry() : LocatorRegistryPrx();
+    string serverId;
+    if(registerProcess)
+    {
+	assert(_instance);
+	serverId = _instance->initializationData().properties->getProperty("Ice.ServerId");
+
+	if(!locatorRegistry)
+	{
+	    Warning out(_instance->initializationData().logger);
+	    out << "object adapter `" << _name << "' cannot register the process without a locator registry";
+	}
+	else if(serverId.empty())
+	{
+	    Warning out(_instance->initializationData().logger);
+	    out << "object adapter `" << _name << "' cannot register the process without a value for Ice.ServerId";
+	}
+    }
+
+    if(!locatorRegistry)
+    {
+	return;
+    }
+
+    if(!_id.empty())
+    {
+	try
+	{
+	    if(_replicaGroupId.empty())
+	    {
+		locatorRegistry->setAdapterDirectProxy(_id, proxy);
+	    }
+	    else
+	    {
+		locatorRegistry->setReplicatedAdapterDirectProxy(_id, _replicaGroupId, proxy);
+	    }
+	}
+	catch(const AdapterNotFoundException&)
+	{
+	    NotRegisteredException ex(__FILE__, __LINE__);
+	    ex.kindOfObject = "object adapter";
+	    ex.id = _id;
+	    throw ex;
+	}
+	catch(const InvalidReplicaGroupIdException&)
+	{
+	    NotRegisteredException ex(__FILE__, __LINE__);
+	    ex.kindOfObject = "replica group";
+	    ex.id = _replicaGroupId;
+	    throw ex;
+	}
+	catch(const AdapterAlreadyActiveException&)
+	{
+	    ObjectAdapterIdInUseException ex(__FILE__, __LINE__);
+	    ex.id = _id;
+	    throw ex;
+	}
+    }	    
+
+    if(registerProcess && !serverId.empty())
+    {
+	try
+	{
+	    ProcessPtr servant = new ProcessI(_communicator);
+	    Ice::ObjectPrx process = createDirectProxy(addWithUUID(servant)->ice_getIdentity());
+	    locatorRegistry->setServerProcessProxy(serverId, ProcessPrx::uncheckedCast(process));
+	}
+	catch(const ServerNotFoundException&)
+	{
+	    NotRegisteredException ex(__FILE__, __LINE__);
+	    ex.kindOfObject = "server";
+	    ex.id = serverId;
+	    throw ex;
+	}
+    }
 }
 
 Ice::ObjectAdapterI::ProcessI::ProcessI(const CommunicatorPtr& communicator) :
